--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,14 @@ div:empty:before {
 .default-message {
 	color: #f2f2f2;
 }
-
+.hide-message {
+	display: none;
+}
+.reset-button {
+	border: 0px;
+	padding: 5px 7px;
+	
+}
 
 /*Footer*/
 footer {
